# lab7

./: .gitignore  CMakeLists.txt
Laboratorio/: a.out  ast.cpp  ast.h  parser.cpp  parser.h  scanner.cpp  token.cpp  token.h  visitor.cpp  visitor.h
Laboratorio/inputs/: input1.txt  input4.txt
Laboratorio/outputs/: output1.txt  output10.txt  output2.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt  tokens_1.txt  tokens_10.txt  tokens_3.txt  tokens_4.txt  tokens_5.txt  tokens_6.txt  tokens_7.txt  tokens_8.txt  tokens_9.txt
